created cart, wishlist and extensively modify order page

--- a/baby.html
+++ b/baby.html
@@ -1136,7 +1136,7 @@
         <section class="adjust">
             <div class="container px-16">
                 <div class="container-fluid my-5">
-                    <div class="my-slider">
+                    <div class="my-slider d-flex align-items-center">
                         <div><img src="bundles/images/landing/HIPSTER.png" alt=""></div>
                         <div><img src="bundles/images/landing/VONDE.png" alt=""></div>
                         <div><img src="bundles/images/landing/norway.png" alt=""></div>
