--- a/contact.html
+++ b/contact.html
@@ -307,7 +307,7 @@
                     </section>
 
 
-                    <div class="my-slider">
+                    <div class="my-slider d-flex align-items-center">
                         <div><img src="bundles/images/landing/HIPSTER.png" alt=""></div>
                         <div><img src="bundles/images/landing/VONDE.png" alt=""></div>
                         <div><img src="bundles/images/landing/norway.png" alt=""></div>
