--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
   <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" /> -->
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
-  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous"> -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
   <!-- MDB -->
-  <link rel="stylesheet" href="css/mdb.min.css" />
+  <!-- <link rel="stylesheet" href="css/mdb.min.css" /> -->
   <link rel="stylesheet" href="style.css">
   <!-- <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'> -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -96,7 +96,7 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-md-4 d-flex justify-content-center justify-content-md-start ps-lg-5 mb-3 mb-md-0">
-              <a href="index.html" class="ms-3">
+              <a href="#!" class="ms-3">
                 <img src="bundles/images/landing/gallery_logo.png" height="80" />
               </a>
             </div>
@@ -167,7 +167,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-scroll bg-white shadow-0">
       <div class="container-fluid">
-        <a class="navbar-brand d-lg-none" href="reg.html">NEW IN</a>
+        <a class="navbar-brand d-lg-none" href="#">NEW IN</a>
         <button class="navbar-toggler ps-0" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarExample01"
           aria-controls="navbarExample01" aria-expanded="false" aria-label="Toggle navigation">
           <span class="d-flex justify-content-start align-items-center">
@@ -177,31 +177,31 @@
         <div class="collapse navbar-links navbar-collapse" id="navbarExample01">
           <ul class="navbar-nav mx-auto mb-3 mt-1">
             <li class="nav-item active">
-              <a class="nav-link" href="dashboard.html">NEW IN</a>
+              <a class="nav-link" href="#!">NEW IN</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="bathing.html">BATHING & CHANGING</a>
+              <a class="nav-link" href="#!">BATHING & CHANGING</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="baby.html">BABY SAFETY</a>
+              <a class="nav-link" href="#!">BABY SAFETY</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="product.html">FEEDING & WEANING</a>
+              <a class="nav-link" href="#!">FEEDING & WEANING</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="update.html">TOYS & GIFT</a>
+              <a class="nav-link" href="#!">TOYS & GIFT</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="checkout.html">BABY CARE</a>
+              <a class="nav-link" href="#!">BABY CARE</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">OFFER SETS & BUNDLES</a>
+              <a class="nav-link" href="#!">OFFER SETS & BUNDLES</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="blog_details.html">PARENTS ROOM</a>
+              <a class="nav-link" href="#!">PARENTS ROOM</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="blog.html">BLOG</a>
+              <a class="nav-link" href="#!">BLOG</a>
             </li>
           </ul>
         </div>
@@ -897,7 +897,7 @@
 
 
         <div class="container-fluid my-5">
-          <div class="my-slider">
+          <div class="my-slider d-flex align-items-center">
             <div><img src="bundles/images/landing/HIPSTER.png" alt=""></div>
             <div><img src="bundles/images/landing/VONDE.png" alt=""></div>
             <div><img src="bundles/images/landing/norway.png" alt=""></div>
@@ -921,7 +921,6 @@
 
 
   </main>
-
 
   <!-- Footer -->
   <footer>
@@ -1077,7 +1076,7 @@
   <!-- Footer -->
 
   <!-- MDB -->
-  <script type="text/javascript" src="js/mdb.min.js"></script>
+  <!-- <script type="text/javascript" src="js/mdb.min.js"></script> -->
   <!-- Custom scripts -->
   <script type="text/javascript"></script>
 
