--- a/log.html
+++ b/log.html
@@ -262,7 +262,7 @@
       </div>
     </div>
     <div class="container-fluid my-5">
-      <div class="my-slider">
+      <div class="my-slider d-flex align-items-center">
         <div><img src="bundles/images/landing/HIPSTER.png" alt=""></div>
         <div><img src="bundles/images/landing/VONDE.png" alt=""></div>
         <div><img src="bundles/images/landing/norway.png" alt=""></div>
