--- a/order.html
+++ b/order.html
@@ -224,8 +224,8 @@
             <div class="container px-16">
                 <div class="container-fluid my-5">
                     <section>
-                        <div>
-                            <h5>Order History</h5>
+                        <div> 
+                            <h5 class="fw-bold my-3">Order History</h5>
                             <div class="row">
                                 <div class="col-9">
 
@@ -233,18 +233,18 @@
                                         <table class="table table-bordered table-hover">
                                             <thead class=" table-secondary">
                                                 <tr>
-                                                    <td>ORDER ID</td>
-                                                    <td>STATUS</td>
-                                                    <td colspan="2">DATE ADDED</td>
-                                                    <td>TOTAL</td>
-                                                    <td>...</td>
+                                                    <td class="fw-bold">ORDER ID</td>
+                                                    <td class="fw-bold">STATUS</td>
+                                                    <td class="fw-bold" colspan="2" >DATE ADDED</td>
+                                                    <td class="fw-bold">TOTAL</td>
+                                                    <td class="fw-bold">...</td>
                                                 </tr>
                                             </thead>
                                             <tbody class="">
                                                 <tr>
                                                     <td>#152459044 </td>
                                                     <td class="text-success fw-bold">processing</td>
-                                                    <td colspan="2">2023-02-23 15:01:21 </td>
+                                                    <td colspan="2" >2023-02-23 15:01:21 </td>
                                                     <td>₦ 17,300</td>
                                                     <td> <a href="">
                                                             <i class="fa-regular text-dark fa-eye arial-hidden="
@@ -254,7 +254,7 @@
                                                 <tr>
                                                     <td>#152459044 </td>
                                                     <td class="text-success fw-bold">processing</td>
-                                                    <td colspan="2">2023-02-16 09:33:12 </td>
+                                                    <td colspan="2" >2023-02-16 09:33:12 </td>
                                                     <td>₦ 21,700</td>
                                                     <td> <a href="">
                                                             <i class="fa-regular text-dark fa-eye arial-hidden="
@@ -269,19 +269,15 @@
                             </div>
                             <div class="my-4">
                                 <div class="row justify-content-center">
-                                    <div class="col-md-2"><a href=""><img
-                                                src="https://gapaautoparts.com/images/IOS_Gapa.png" class="img-fluid"
-                                                alt=""></a></div>
-                                    <div class="col-md-2"><a href=""><img
-                                                src="https://gapaautoparts.com/images/IOS_Gapa.png" class="img-fluid"
-                                                alt=""></a></div>
+                                    <div class="col-md-2"><a href=""><img src="https://gapaautoparts.com/images/IOS_Gapa.png" class="img-fluid" alt=""></a></div>
+                                    <div class="col-md-2"><a href=""><img src="https://gapaautoparts.com/images/IOS_Gapa.png" class="img-fluid" alt=""></a></div>
                                 </div>
                             </div>
                         </div>
                     </section>
 
 
-                    <div class="my-slider">
+                    <div class="my-slider d-flex align-items-center">
                         <div><img src="bundles/images/landing/HIPSTER.png" alt=""></div>
                         <div><img src="bundles/images/landing/VONDE.png" alt=""></div>
                         <div><img src="bundles/images/landing/norway.png" alt=""></div>
@@ -309,14 +305,7 @@
     <!-- Footer -->
     <footer>
         <div class="text-center container px-16 text-lg-start pb-3 pt-5 text-muted">
-            <div>
-                <select class="form-select" aria-label="Default select example">
-                    <option selected>Open this select menu</option>
-                    <option value="1">One</option>
-                    <option value="2">Two</option>
-                    <option value="3">Three</option>
-                </select>
-            </div>
+            
             <!-- Section: Social media -->
             <div class="container">
                 <div class="row me-md-4">
