--- a/update.html
+++ b/update.html
@@ -167,7 +167,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-scroll bg-white shadow-0">
       <div class="container-fluid">
-        <a class="navbar-brand d-lg-none" href="#">NEW IN</a>
+        <a class="navbar-brand d-lg-none" href="product.html">NEW IN</a>
         <button class="navbar-toggler ps-0" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarExample01"
           aria-controls="navbarExample01" aria-expanded="false" aria-label="Toggle navigation">
           <span class="d-flex justify-content-start align-items-center">
@@ -177,31 +177,31 @@
         <div class="collapse navbar-links navbar-collapse" id="navbarExample01">
           <ul class="navbar-nav mx-auto mb-3 mt-1">
             <li class="nav-item active">
-              <a class="nav-link" href="#!">NEW IN</a>
+              <a class="nav-link" href="product.html">NEW IN</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="#!">BATHING & CHANGING</a>
+              <a class="nav-link" href="product.html">BATHING & CHANGING</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#!">BABY SAFETY</a>
+              <a class="nav-link" href="baby.html">BABY SAFETY</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#!">FEEDING & WEANING</a>
+              <a class="nav-link" href="bathing.html">FEEDING & WEANING</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="#!">TOYS & GIFT</a>
+              <a class="nav-link" href="order.html">TOYS & GIFT</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#!">BABY CARE</a>
+              <a class="nav-link" href="cart.html">BABY CARE</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#!">OFFER SETS & BUNDLES</a>
+              <a class="nav-link" href="contact.html">OFFER SETS & BUNDLES</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="#!">PARENTS ROOM</a>
+              <a class="nav-link" href="reg.html">PARENTS ROOM</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#!">BLOG</a>
+              <a class="nav-link" href="blog.html">BLOG</a>
             </li>
           </ul>
         </div>
@@ -358,7 +358,7 @@
           <!-- Grid row -->
           <div class="row mt-3">
             <!-- Grid column -->
-            <div class="col-md-4 mx-0 mb-4">
+            <div class="col-md-3 mx-0 mb-4">
               <!-- Content -->
               <h6 class=" text-dark sign-h4 mb-4">
                 Store
@@ -373,7 +373,7 @@
             <!-- Grid column -->
 
             <!-- Grid column -->
-            <div class="col-md-3 mx-0 mb-4">
+            <div class="col-md-2 mx-0 mb-4">
               <!-- Links -->
               <h6 class=" text-dark sign-h4 mb-4">
                 Product
@@ -424,10 +424,36 @@
                 <a href="#!" class="text-reset">Collection Points</a>
               </p>
             </div>
+
+            <!-- Grid column -->
+            <div class="col-md-2 mx-0 mb-4">
+              <!-- Links -->
+              <h6 class=" text-dark sign-h4 mb-4">
+                Quick Links
+              </h6>
+              <p>
+                <a href="#!" class="text-reset">Shopping at Gallery Bebe</a>
+              </p>
+              <p>
+                <a href="#!" class="text-reset">Acceptance Order</a>
+              </p>
+              <p>
+                <a href="#!" class="text-reset">Description</a>
+              </p>
+              <p>
+                <a href="#!" class="text-reset">Prices</a>
+              </p>
+              <p>
+                <a href="#!" class="text-reset">Data Protection</a>
+              </p>
+              <p>
+                <a href="#!" class="text-reset">Cookies</a>
+              </p>
+            </div>
             <!-- Grid column -->
 
             <!-- Grid column -->
-            <div class="col-md-3 ps-5 mx-0 mb-md-0 mb-4">
+            <div class="col-md-3 mx-0 mb-md-0 mb-4">
               <!-- Links -->
               <h6 class=" text-dark mb-4 sign-h4">Socials</h6>
               <div class="text-dark">
@@ -446,8 +472,47 @@
               </div>
               <div class="mt-3">
                 <h5 class="mb-2 text-dark sign-h4" style="font-weight: 700;">Secure Payment</h5>
-                <img class="img-fluid" src="bundles/images/lit-icons/master-card-logo.png" alt="">
-                <img class="img-fluid" src="bundles/images/lit-icons/visa-pay-logo.png" alt="">
+                <div class="d-flex">
+                  <a href="">
+                    <!-- <img class="img-fluid" style="width: 45px; height: 45px;" src="bundles/images/lit-icons/master-card-logo.png" alt=""> -->
+                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="45" height="45" viewBox="0 0 48 48">
+                      <path fill="#3F51B5"
+                        d="M45,35c0,2.209-1.791,4-4,4H7c-2.209,0-4-1.791-4-4V13c0-2.209,1.791-4,4-4h34c2.209,0,4,1.791,4,4V35z">
+                      </path>
+                      <path fill="#FFC107" d="M30 14A10 10 0 1 0 30 34A10 10 0 1 0 30 14Z"></path>
+                      <path fill="#FF3D00"
+                        d="M22.014,30c-0.464-0.617-0.863-1.284-1.176-2h5.325c0.278-0.636,0.496-1.304,0.637-2h-6.598C20.07,25.354,20,24.686,20,24h7c0-0.686-0.07-1.354-0.201-2h-6.598c0.142-0.696,0.359-1.364,0.637-2h5.325c-0.313-0.716-0.711-1.383-1.176-2h-2.973c0.437-0.58,0.93-1.122,1.481-1.595C21.747,14.909,19.481,14,17,14c-5.523,0-10,4.477-10,10s4.477,10,10,10c3.269,0,6.162-1.575,7.986-4H22.014z">
+                      </path>
+                    </svg>
+                  </a>
+                  <a href="">
+                    <!-- <img class="img-fluid" style="width: 45px; height: 45px;" src="bundles/images/lit-icons/visa-pay-logo.png" alt=""> -->
+                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="45" height="45" viewBox="0 0 48 48">
+                      <path fill="#1565C0"
+                        d="M45,35c0,2.209-1.791,4-4,4H7c-2.209,0-4-1.791-4-4V13c0-2.209,1.791-4,4-4h34c2.209,0,4,1.791,4,4V35z">
+                      </path>
+                      <path fill="#FFF"
+                        d="M15.186 19l-2.626 7.832c0 0-.667-3.313-.733-3.729-1.495-3.411-3.701-3.221-3.701-3.221L10.726 30v-.002h3.161L18.258 19H15.186zM17.689 30L20.56 30 22.296 19 19.389 19zM38.008 19h-3.021l-4.71 11h2.852l.588-1.571h3.596L37.619 30h2.613L38.008 19zM34.513 26.328l1.563-4.157.818 4.157H34.513zM26.369 22.206c0-.606.498-1.057 1.926-1.057.928 0 1.991.674 1.991.674l.466-2.309c0 0-1.358-.515-2.691-.515-3.019 0-4.576 1.444-4.576 3.272 0 3.306 3.979 2.853 3.979 4.551 0 .291-.231.964-1.888.964-1.662 0-2.759-.609-2.759-.609l-.495 2.216c0 0 1.063.606 3.117.606 2.059 0 4.915-1.54 4.915-3.752C30.354 23.586 26.369 23.394 26.369 22.206z">
+                      </path>
+                      <path fill="#FFC107"
+                        d="M12.212,24.945l-0.966-4.748c0,0-0.437-1.029-1.573-1.029c-1.136,0-4.44,0-4.44,0S10.894,20.84,12.212,24.945z">
+                      </path>
+                    </svg>
+                  </a>
+                  <a href="">
+                    <svg <path fill="#0d62ab"
+                      d="M18.7,13.767l0.005,0.002C18.809,13.326,19.187,13,19.66,13h13.472c0.017,0,0.034-0.007,0.051-0.006	C32.896,8.215,28.887,6,25.35,6H11.878c-0.474,0-0.852,0.335-0.955,0.777l-0.005-0.002L5.029,33.813l0.013,0.001	c-0.014,0.064-0.039,0.125-0.039,0.194c0,0.553,0.447,0.991,1,0.991h8.071L18.7,13.767z">
+                      </path>
+                      <path fill="#199be2"
+                        d="M33.183,12.994c0.053,0.876-0.005,1.829-0.229,2.882c-1.281,5.995-5.912,9.115-11.635,9.115	c0,0-3.47,0-4.313,0c-0.521,0-0.767,0.306-0.88,0.54l-1.74,8.049l-0.305,1.429h-0.006l-1.263,5.796l0.013,0.001	c-0.014,0.064-0.039,0.125-0.039,0.194c0,0.553,0.447,1,1,1h7.333l0.013-0.01c0.472-0.007,0.847-0.344,0.945-0.788l0.018-0.015	l1.812-8.416c0,0,0.126-0.803,0.97-0.803s4.178,0,4.178,0c5.723,0,10.401-3.106,11.683-9.102	C42.18,16.106,37.358,13.019,33.183,12.994z">
+                      </path>
+                      <path fill="#006fc4"
+                        d="M19.66,13c-0.474,0-0.852,0.326-0.955,0.769L18.7,13.767l-2.575,11.765	c0.113-0.234,0.359-0.54,0.88-0.54c0.844,0,4.235,0,4.235,0c5.723,0,10.432-3.12,11.713-9.115c0.225-1.053,0.282-2.006,0.229-2.882	C33.166,12.993,33.148,13,33.132,13H19.66z">
+                      </path>
+                      >
+                    </svg>
+                  </a>
+                </div>
               </div>
             </div>
             <!-- Grid column -->
