modification of entire site

--- a/baby.html
+++ b/baby.html
@@ -180,10 +180,10 @@
               <a class="nav-link" href="product.html">NEW IN</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="product.html">BATHING & CHANGING</a>
+              <a class="nav-link" href="baby.html">BATHING & CHANGING</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="baby.html">BABY SAFETY</a>
+              <a class="nav-link" href="product.html">BABY SAFETY</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="bathing.html">FEEDING & WEANING</a>
@@ -299,25 +299,25 @@
                                             <div class="mb-3 form-check">
                                                 <input type="checkbox" name="bedroomBrand" class="form-check-input"
                                                     id="bedroomBrand">
-                                                <label class="form-check-label ms-3" for="bedroomBrand">Bedroom <span
+                                                <label class="form-check-label ms-3" for="bedroomBrand">Patterned Butter Soother <span
                                                         class="ms-4">(20)</span></label>
                                             </div>
                                             <div class="mb-3 form-check">
                                                 <input type="checkbox" name="decorBrand" class="form-check-input"
                                                     id="decorBrand">
-                                                <label class="form-check-label ms-3" for="decorBrand">Decor <span
+                                                <label class="form-check-label ms-3" for="decorBrand">Butter Soother <span
                                                         class="ms-4">(10)</span></label>
                                             </div>
                                             <div class="mb-3 form-check">
                                                 <input type="checkbox" name="decorationBrand" class="form-check-input"
                                                     id="decorationBrand">
-                                                <label class="form-check-label ms-3" for="decorationBrand">Decoration
+                                                <label class="form-check-label ms-3" for="decorationBrand">Round Body Soother
                                                     <span class="ms-4">(8)</span></label>
                                             </div>
                                             <div class="mb-3 form-check">
                                                 <input type="checkbox" name="KitchenBrand" class="form-check-input"
                                                     id="KitchenBrand">
-                                                <label class="form-check-label ms-3" for="KitchenBrand">Kitchen <span
+                                                <label class="form-check-label ms-3" for="KitchenBrand">Transparent Design Soother <span
                                                         class="ms-4">(15)</span></label>
                                             </div>
                                             <div class="mb-3 form-check">
