--- a/index.html
+++ b/index.html
@@ -181,10 +181,10 @@
               <a class="nav-link" href="product.html">NEW IN</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="product.html">BATHING & CHANGING</a>
+              <a class="nav-link" href="baby.html">BATHING & CHANGING</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="baby.html">BABY SAFETY</a>
+              <a class="nav-link" href="product.html">BABY SAFETY</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="bathing.html">FEEDING & WEANING</a>
