--- a/blog_details.html
+++ b/blog_details.html
@@ -98,7 +98,7 @@
                     <div class="row">
                         <div
                             class="col-md-4 d-flex justify-content-center justify-content-md-start ps-lg-5 mb-3 mb-md-0">
-                            <a href="#!" class="ms-3">
+                            <a href="index.html" class="ms-3">
                                 <img src="bundles/images/landing/gallery_logo.png" height="80" />
                             </a>
                         </div>
